--- a/notebooks/general_salary_data copy.ipynb
+++ b/notebooks/general_salary_data copy.ipynb
@@ -806,7 +806,7 @@
     }
    ],
    "source": [
-    "rows_with_nan = df2[df2.isna().any(axis=1)]\n",
+    "rows_with_nan = df[df.isna().any(axis=1)]\n",
     "rows_with_nan"
    ]
   },
